// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should match snapshot and styles for default props 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-1"
  >
    <input
      class="makeStyles-input-3"
      type="text"
    />
  </div>
</DocumentFragment>
`;

exports[`Input should match snapshot with label 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-root-4"
  >
    <label
      class="makeStyles-label-5"
      for="test"
    >
      Name:
    </label>
    <input
      class="makeStyles-input-6"
      id="test"
      type="text"
    />
  </div>
</DocumentFragment>
`;
